--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -10,17 +10,32 @@
     
 }
 
-.merriweather-light {
+ html, body {
     font-family: "Merriweather", serif;
-    font-weight: 300;
-    font-style: normal;
   }
   
-  .merriweather-regular {
-    font-family: "Merriweather", serif;
-    font-weight: 400;
+  .fw-500 {
+    font-weight: 500;
     font-style: normal;
   }
+
+  .infscroll h1{
+    font-size: 22px;
+    letter-spacing: -0.6px;
+  }
+  
+  @media only screen and (max-width:768){
+    .infscroll h1 {
+      font-size: 15px;
+      letter-spacing: -0.0px;
+    }
+    .infscroll-author, .infscroll-date{
+      font-size: 12px;
+    }
+  }
+
+
+
   
   .merriweather-bold {
     font-family: "Merriweather", serif;
@@ -28,11 +43,7 @@
     font-style: normal;
   }
   
-  .merriweather-black {
-    font-family: "Merriweather", serif;
-    font-weight: 900;
-    font-style: normal;
-  }
+
   
   .merriweather-light-italic {
     font-family: "Merriweather", serif;
