--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -19,11 +19,15 @@
     font-style: normal;
   }
 
+  .fs-14{
+    font-size: 14px;
+  }
+  
   .infscroll h1{
     font-size: 22px;
     letter-spacing: -0.6px;
   }
-  
+
   @media only screen and (max-width:768){
     .infscroll h1 {
       font-size: 15px;
