--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -8,8 +8,10 @@
     {% include "blog/components/card.html" %}
     <div class="row">
         <div class="col-12 col-lg-8">
-            {% include "blog/components/post-list-element.html" %}
+            {% include "blog/components/post-list-elements.html" %}
         </div>
-        <div class="d-none d-lg-block col-4"></div>
+        <div class="d-none d-lg-block col-4">
+            {% sidebar_tag_cloud %}
+          </div>
       </div>
 {% endblock content %}
