--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -12,6 +12,7 @@
         </div>
         <div class="d-none d-lg-block col-4">
             {% sidebar_tag_cloud %}
-          </div>
+            {% include "blog/footer.html" %}
+        </div>
       </div>
 {% endblock content %}
