--- a/blog/static/css/main.css
+++ b/blog/static/css/main.css
@@ -22,7 +22,12 @@
   .fs-14{
     font-size: 14px;
   }
-  
+
+  .fs-16{
+    font-size: 16px;
+    line-height: 30px;
+  }
+
   .infscroll h1{
     font-size: 22px;
     letter-spacing: -0.6px;
